[package]
name = "quinn_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4.14"
protobuf = { version = "3.0.0-alpha.6", git = "https://github.com/stepancheg/rust-protobuf" }
quinn = { version = "0.8", optional = true }
rand = "0.8"
rcgen = "0.9"
rustls = { version = "0.20", default-features = false, features = [
    "quic",
], optional = true }
rustls-pemfile = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23.1"
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.6", features = ["full"] }

[features]
default = ["quic", "rustls_dangerous_configuration"]
quic = ["quinn"]
rustls_dangerous_configuration = ["rustls/dangerous_configuration"]
